@@ -1,3 +1,11 @@
+2008-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>
+		Michael South <msouth@msouth.org>
+
+	PR 1344/bsps
+	* configure.ac, clock/ckinit.c, timer/timer.c: Add use of TSC for
+	nanoseconds granularity. i8254 is very slow on some systems. TSC use
+	is auto-detected by default.
+
 2008-12-02	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* startup/bspgetworkarea.c: Remove debug prints.
